Add fast fetch file inspection
